--- a/proj.html
+++ b/proj.html
@@ -13,13 +13,19 @@
             align-items: center;
             justify-content: center;
         }
+        .two
+        {
+            border-top-right-radius:10px ;
+            border-right: 3px solid black;
+            border-bottom: 3px solid black;
+        }
     </style>
 </head>
 <body style="background-color: red;"> 
     <div class="one">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a href="">
-                <img src="logo2.png" width="50" height="50">
+            <a href="" class="two">
+                <img src="https://picsum.photos/seed/picsum/200/300" width="50" height="50">
             </a>
             <div class="container-fluid">
               
